--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       <!-- Секция Постояных клиентов -->
 
       <section class="section client">
-        <div class="container">
+        <div class="container client__container">
           <h2 class="client__text">Постоянные клиенты</h2>
           <ul class="list client__block">
             <li class="client__item">
@@ -396,6 +396,7 @@
 
     <footer class="footer">
       <div class="container footer__container">
+      <div class="footer__desktop">
           <address class="address footer__address">
               <a class="logo" href="./index.html"><span class="logo__web">Web</span><span class="logo__studio-footer">Studio</span></a>
               <p class="footer__title">г. Киев, пр-т Леси Украинки, 26</p>
@@ -441,18 +442,21 @@
                           </li>
                       </ul>
                       </div>
+                    </div>
+                    <div class="footer__desktop-mail">
               <form class="footer__form">
+                <p class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ<p>
                   <label class="footer__label" >
-                      <span class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>
                       <input class="footer__email" type="email" name="email-footer" placeholder="E-mail" />
                   </label>
+                </form>
                   <button type="submit" class="footer__button footer__text-button">
-                      Подписаться
+                      <span class="footer__text-button">Подписаться</span>
                       <svg class="footer__button-icon" width="24" height="24">
                       <use href="./images/symbol-defs.svg#icon-telegram"></use>
                       </svg>
                   </button>
-              </form>
+                </div>
       </div>
   </footer>
 
