--- a/portfolio.html
+++ b/portfolio.html
@@ -222,8 +222,9 @@
 
                 <!--  Секция Footer -->
 
-    <footer class="footer">
+<footer class="footer">
     <div class="container footer__container">
+    <div class="footer__desktop">
         <address class="address footer__address">
             <a class="logo" href="./index.html"><span class="logo__web">Web</span><span class="logo__studio-footer">Studio</span></a>
             <p class="footer__title">г. Киев, пр-т Леси Украинки, 26</p>
@@ -238,49 +239,52 @@
         </address>
             <div class="footer__social-network">
                 <p class="footer__slogan">ПРИСОЕДИНЯЙТЕСЬ</p>
-                    <ul class="list social-network">
+                    <ul class="list social-network__footer">
                         <li class="social-network__items">
                             <a class="social-network__link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
-                            <svg class="social-network__icon">
+                            <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-network__items">
                             <a class="social-network__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">
-                            <svg class="social-network__icon">
+                            <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-network__items">
                             <a class="social-network__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
-                            <svg class="social-network__icon">
+                            <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-network__items">
                             <a class="social-network__link" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">
-                            <svg class="social-network__icon">
+                            <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                             </svg>
                             </a>
-                        </li>
+        </li>
                     </ul>
-                    </div>
+                </div>
+            </div>
+        <div class="footer__desktop-mail">
             <form class="footer__form">
-                <label class="footer__label">
-                    <span class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>
+                <p class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ<p>
+                <label class="footer__label" >
                     <input class="footer__email" type="email" name="email-footer" placeholder="E-mail" />
                 </label>
-                <button type="submit" class="footer__button">
-                    <span class="footer__text-button">Подписаться</span>
-                    <svg class="footer__button-icon">
-                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
-                    </svg>
-                </button>
             </form>
+            <button type="submit" class="footer__button footer__text-button">
+                <span class="footer__text-button">Подписаться</span>
+                <svg class="footer__button-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                </svg>
+            </button>
+        </div>
     </div>
 </footer>
 
